--- a/dashboard/dashboard/templates/bug_result.html
+++ b/dashboard/dashboard/templates/bug_result.html
@@ -186,7 +186,7 @@ This template contains HTML for the following things:
                      data-projectId="{{bug.projectId}}"
                      target="_blank"
                      class="bug-link bug-{{bug.state}} bug-{{bug.status}}">
-                     {{bug.id}}
+                     {{bug.projectId}}:{{bug.id}}
                   </a>
                 </td>
                 <td class="bug-status">{{bug.status}}</td>
@@ -222,6 +222,12 @@ This template contains HTML for the following things:
       <b>Description:</b><br>
       <textarea rows=10 cols=60 name="description">{{description}}</textarea>
       <br><br>
+      <b>Monorail project</b><br>
+      <select name="project">
+        {% for project in projects %}
+          <option>{{project}}</option>
+        {% endfor %}
+      </select>
       <b>Labels:</b><br>
       {% for label in labels %}
       <label>
