Revert "Chrome Perf Dashboard UI links to Monorail bugs are missing project id."
This reverts commit 0dca23916904f0bb7d03ae71b0ad32a8e2f54704.

Reason for revert: some projectId are still missing.

Original change's description:
> Chrome Perf Dashboard UI links to Monorail bugs are missing project id.
> 
> Add a Monorail project id box in the form to create a new bug.
> Also some links to bugs are missing a project id.
> When the project id is missing the links are redirecting to chromium bugs.
> 
> Bug: chromium:1101773
> Change-Id: I851296df105a3ead7a9edddff507839030b6914a
> Reviewed-on: https://chromium-review.googlesource.com/c/catapult/+/2354329
> Commit-Queue: Jeremy Leconte <jleconte@google.com>
> Reviewed-by: Mirko Bonadei <mbonadei@chromium.org>
> Reviewed-by: Dean Berris <dberris@chromium.org>

TBR=mbonadei@chromium.org,dberris@chromium.org,fancl@chromium.org,jleconte@google.com

Change-Id: Ib2382bb05ca9fbb92012bbfbc14a1baa5d5bca20
No-Presubmit: true
No-Tree-Checks: true
No-Try: true
Bug: chromium:1101773

--- a/dashboard/dashboard/templates/bug_result.html
+++ b/dashboard/dashboard/templates/bug_result.html
@@ -186,7 +186,7 @@ This template contains HTML for the following things:
                      data-projectId="{{bug.projectId}}"
                      target="_blank"
                      class="bug-link bug-{{bug.state}} bug-{{bug.status}}">
-                     {{bug.projectId}}:{{bug.id}}
+                     {{bug.id}}
                   </a>
                 </td>
                 <td class="bug-status">{{bug.status}}</td>
@@ -222,16 +222,6 @@ This template contains HTML for the following things:
       <b>Description:</b><br>
       <textarea rows=10 cols=60 name="description">{{description}}</textarea>
       <br><br>
-      <b>Monorail project</b><br>
-      <select name="project">
-        {% for project in projects %}
-          {% if project == default_project %}
-            <option selected="selected">{{project}}</option>
-          {% else %}
-            <option>{{project}}</option>
-          {% endif %}
-        {% endfor %}
-      </select><br><br>
       <b>Labels:</b><br>
       {% for label in labels %}
       <label>
