Revert "Chrome Perf Dashboard UI links to Monorail bugs are missing project id."
This reverts commit af63c44964adbcb5c46c65bf7272addd06e8478e.

Reason for revert: some project ids are still missing.

Original change's description:
> Chrome Perf Dashboard UI links to Monorail bugs are missing project id.
> 
> Some links to bugs are missing a project id.
> When the project id is missing the links are redirecting to chromium bugs.
> 
> Bug: chromium:1101773
> Change-Id: I96f11a20602362dd8043a06d37ef52a4386715ae
> Reviewed-on: https://chromium-review.googlesource.com/c/catapult/+/2329572
> Reviewed-by: Dean Berris <dberris@chromium.org>
> Reviewed-by: Chenlin Fan <fancl@chromium.org>
> Commit-Queue: Jeremy Leconte <jleconte@google.com>

TBR=dberris@chromium.org,fancl@chromium.org,jleconte@google.com

# Not skipping CQ checks because original CL landed > 1 day ago.

Bug: chromium:1101773
Change-Id: Ifb750ad4d78dc04a0eeef34ace76db0026f810a3

--- a/dashboard/dashboard/templates/main.html
+++ b/dashboard/dashboard/templates/main.html
@@ -34,7 +34,7 @@ found in the LICENSE file.
       <td>{{link(anomaly)}}{{anomaly.test}}</a></td>
       {% if show_bugs %}
         {% if anomaly.bug_id > 0 and anomaly.bug_id != '' %}
-          <td><a href="http://crbug.com/{{anomaly.project_id}}/{{anomaly.bug_id}}"
+          <td><a href="http://crbug.com/{{anomaly.bug_id}}"
                  target="_blank"
                  title="View bug"
                  class="change-table">{{anomaly.bug_id}}</a></td>
