--- a/dashboard/dashboard/templates/bug_result.html
+++ b/dashboard/dashboard/templates/bug_result.html
@@ -181,11 +181,12 @@ This template contains HTML for the following things:
             {% for bug in bugs %}
               <tr {% if bug.relevant %} class="highlighted" {% endif %}>
                 <td>
-                  <a href="http://crbug.com/{{bug.id}}"
+                  <a href="http://crbug.com/{{bug.projectId}}/{{bug.id}}"
                      data-bugid="{{bug.id}}"
+                     data-projectId="{{bug.projectId}}"
                      target="_blank"
                      class="bug-link bug-{{bug.state}} bug-{{bug.status}}">
-                     {{bug.id}}
+                     {{bug.projectId}}:{{bug.id}}
                   </a>
                 </td>
                 <td class="bug-status">{{bug.status}}</td>
@@ -203,6 +204,8 @@ This template contains HTML for the following things:
             bugLinks[i].addEventListener('click', function(e) {
               var bugId = e.target.getAttribute('data-bugid');
               document.getElementById('bug_id').value = bugId;
+              var projectId = e.target.getAttribute('data-projectId');
+              document.getElementById('project_id').value = projectId;
               e.preventDefault();
             }, true);
           }
@@ -219,6 +222,16 @@ This template contains HTML for the following things:
       <b>Description:</b><br>
       <textarea rows=10 cols=60 name="description">{{description}}</textarea>
       <br><br>
+      <b>Monorail project</b><br>
+      <select name="project">
+        {% for project in projects %}
+          {% if project == default_project %}
+            <option selected="selected">{{project}}</option>
+          {% else %}
+            <option>{{project}}</option>
+          {% endif %}
+        {% endfor %}
+      </select><br><br>
       <b>Labels:</b><br>
       {% for label in labels %}
       <label>
@@ -257,6 +270,7 @@ This template contains HTML for the following things:
           var data = {
             'action': 'bug_create_result',
             'bug_id': {{bug_id}},
+            'project_id': {{project_id}},
             'bisect_error': '{{bisect_error}}',
             'issue_url': '{{issue_url}}',
             'issue_id': '{{issue_id}}',
