--- a/dashboard/dashboard/templates/bug_result.html
+++ b/dashboard/dashboard/templates/bug_result.html
@@ -161,8 +161,12 @@ This template contains HTML for the following things:
     {% elif bug_associate_form %}
       <form action="/associate_alerts" method="POST">
         <input type="hidden" name="keys" value="{{keys}}">
-        <input type="text" name="bug_id" id="bug_id"
-               required placeholder="Bug ID"><br><br>
+        <input type="hidden" name="bug_id">
+        <input type="hidden" name="project_id">
+        <input type="text" name="project_and_bug" id="project_and_bug"
+               required placeholder="Bug ID" pattern=".*:?[0-9]+"
+               oninput="splitProjectAndBug()">
+        <br><br>
         <input type="submit">
       </form>
       <p>Recent bugs shown below. Click on a bug ID to copy into the form field.
@@ -181,11 +185,12 @@ This template contains HTML for the following things:
             {% for bug in bugs %}
               <tr {% if bug.relevant %} class="highlighted" {% endif %}>
                 <td>
-                  <a href="http://crbug.com/{{bug.id}}"
+                  <a href="http://crbug.com/{{bug.projectId}}/{{bug.id}}"
                      data-bugid="{{bug.id}}"
+                     data-projectid="{{bug.projectId}}"
                      target="_blank"
                      class="bug-link bug-{{bug.state}} bug-{{bug.status}}">
-                     {{bug.id}}
+                     {{bug.projectId}}:{{bug.id}}
                   </a>
                 </td>
                 <td class="bug-status">{{bug.status}}</td>
@@ -197,12 +202,28 @@ This template contains HTML for the following things:
         </table>
       </div>
       <script>
+        function splitProjectAndBug() {
+          var project_and_bug = document.getElementById('project_and_bug');
+          if (project_and_bug.includes(':')) {
+            var res = project_and_bug.split(":");
+            document.getElementById('project_id').value = res[0];
+            document.getElementById('bug_id').value = res[res.length - 1];
+          }
+          else {
+            document.getElementById('project_id').value = 'chromium';
+            document.getElementById('bug_id').value = project_and_bug;
+          }
+        }
         function init() {
           var bugLinks = document.getElementsByClassName('bug-link');
           for (var i = 0; i < bugLinks.length; i++) {
             bugLinks[i].addEventListener('click', function(e) {
               var bugId = e.target.getAttribute('data-bugid');
+              var projectId = e.target.getAttribute('data-projectid');
+              projectAndBug = projectId + ':' + bugId;
               document.getElementById('bug_id').value = bugId;
+              document.getElementById('project_id').value = projectId;
+              document.getElementById('project_and_bug').value = projectAndBug;
               e.preventDefault();
             }, true);
           }
@@ -257,6 +278,7 @@ This template contains HTML for the following things:
           var data = {
             'action': 'bug_create_result',
             'bug_id': {{bug_id}},
+            'project_id': {{project_id}},
             'bisect_error': '{{bisect_error}}',
             'issue_url': '{{issue_url}}',
             'issue_id': '{{issue_id}}',
