Add missing ids for the getElementById to work.
This is a forward fix for crrev.com/c/2383650.
Javascript getElementById where added by the id is missing in the html.

Bug: chromium:1101773
Change-Id: I2be180457faa484a511de607f073bc8a9f6b55f1

--- a/dashboard/dashboard/templates/bug_result.html
+++ b/dashboard/dashboard/templates/bug_result.html
@@ -161,8 +161,8 @@ This template contains HTML for the following things:
     {% elif bug_associate_form %}
       <form action="/associate_alerts" method="POST">
         <input type="hidden" name="keys" value="{{keys}}">
-        <input type="hidden" name="bug_id">
-        <input type="hidden" name="project_id">
+        <input type="hidden" name="bug_id" id="bug_id">
+        <input type="hidden" name="project_id" id="project_id">
         <input type="text" name="project_and_bug" id="project_and_bug"
                required placeholder="Bug ID" pattern=".*:?[0-9]+"
                oninput="splitProjectAndBug()">
