--- a/dashboard/dashboard/templates/bug_result.html
+++ b/dashboard/dashboard/templates/bug_result.html
@@ -203,7 +203,7 @@ This template contains HTML for the following things:
       </div>
       <script>
         function splitProjectAndBug() {
-          var project_and_bug = document.getElementById('project_and_bug');
+          var project_and_bug = document.getElementById('project_and_bug').value;
           if (project_and_bug.includes(':')) {
             var res = project_and_bug.split(":");
             document.getElementById('project_id').value = res[0];
@@ -278,7 +278,7 @@ This template contains HTML for the following things:
           var data = {
             'action': 'bug_create_result',
             'bug_id': {{bug_id}},
-            'project_id': {{project_id}},
+            'project_id': '{{project_id}}',
             'bisect_error': '{{bisect_error}}',
             'issue_url': '{{issue_url}}',
             'issue_id': '{{issue_id}}',
